# ChangeLog for dev-util/eric
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.206 2013/12/24 12:52:49 ago Exp $

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> eric-4.5.14.ebuild:
  Stable for x86, wrt bug #486724

*eric-5.3.8 (24 Nov 2013)
*eric-4.5.16 (24 Nov 2013)

  24 Nov 2013; Davide Pesavento <pesa@gentoo.org> +eric-4.5.16.ebuild,
  +eric-5.3.8.ebuild, -eric-4.5.15.ebuild, -eric-5.3.7.ebuild,
  -files/eric-4.4-no-interactive.patch:
  Version bumps; tweak sed expression wrt bug 487272.

  14 Oct 2013; Tony Vroon <chainsaw@gentoo.org> eric-4.5.14.ebuild,
  eric-5.3.6.ebuild:
  Marked stable on AMD64 based on arch tester report by Elijah "Armageddon" El
  Lazkani in bug #486724.

*eric-5.3.7 (01 Oct 2013)
*eric-4.5.15 (01 Oct 2013)

  01 Oct 2013; Davide Pesavento <pesa@gentoo.org> +eric-4.5.15.ebuild,
  +eric-5.3.7.ebuild, -eric-5.3.5.ebuild:
  Version bumps.

*eric-5.3.6 (27 Aug 2013)
*eric-4.5.14 (27 Aug 2013)

  27 Aug 2013; Davide Pesavento <pesa@gentoo.org> +eric-4.5.14.ebuild,
  +eric-5.3.6.ebuild, -eric-5.3.4.ebuild:
  Version bumps.

*eric-5.3.5 (19 Jul 2013)

  19 Jul 2013; Patrick Lauer <patrick@gentoo.org> +eric-5.3.5.ebuild:
  Bump

  07 Jul 2013; Michael Palimaka <kensington@gentoo.org> -eric-4.5.8.ebuild,
  -eric-5.2.7.ebuild, -eric-5.3.3.ebuild:
  Remove old.

  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> eric-4.5.10.ebuild,
  eric-5.3.2.ebuild:
  Stable for x86, wrt bug #470488

*eric-5.3.4 (13 Jun 2013)

  13 Jun 2013; Patrick Lauer <patrick@gentoo.org> +eric-5.3.4.ebuild:
  Bump

  23 May 2013; Agostino Sarubbo <ago@gentoo.org> eric-4.5.10.ebuild,
  eric-5.3.2.ebuild:
  Stable for amd64, wrt bug #470488

*eric-5.3.3 (22 May 2013)

  22 May 2013; Patrick Lauer <patrick@gentoo.org> +eric-5.3.3.ebuild:
  Bump

  22 May 2013; Michael Palimaka <kensington@gentoo.org>
  +files/eric-4.5-no-interactive.patch, eric-4.5.10.ebuild: