@@ -3,34 +3,24 @@ Hash: SHA256
 
 AUX eric-4.4-no-pykde.patch 4499 SHA256 371c080e2f561ece22f4e6a0ff427efdf43b0d3d81cefc2b7efb99010f890dde SHA512 f96e9a2fa528fb9e01af738c72a48aa329633411e160877dd8185ff3245a5a0f8cb7e586f5aa2d19bc174a6124b02b275585737b6fa0f8efbd1094642652470d WHIRLPOOL b1cd5d1674c2c51af04ef157ed9c34a19a974fd4799e00ef88fb443bd7847cd277ab7ae11ca4b91e476119d7e21bdb8572f5987643c53e7a0920b5b064ddbe5f
 AUX eric-4.5-no-interactive.patch 532 SHA256 c0978b5c15f39d3157065d76b38e9b2d12c23eb13ec887104413e7acbbbcf581 SHA512 64d4d7f96cd3f69d5dd3ebca3b13def2d27358dcb08c9d51e983aaa879ad276ea7130fbfe13cd74823f2dc97af717e94455b1c852675f61e1a615faa4de1bb48 WHIRLPOOL c0f52797de85b8877de1af39d884c9b7aca775f3d58cced50e6b67127595021e4b1dba5abc836132b719676a3d7861c7cb8036951e4a35d0fe5466a701f7206d
-DIST eric4-4.5.10.tar.gz 8328015 SHA256 f503b970275634ccfc4e2ac0a6a06ac8607860d2578ed5cfdbc01a17567d3c4e SHA512 681be8625103d1877b70ecd522d3a640368f56d93b946ab062ae0c09f96b98e4c5b6a72bc29dd57ba50695a3135ca77fdcf96d39bf1e62cb1d13ae87cc6a7710 WHIRLPOOL e7db5866d22c7c669bd77c8261c6b8ac2040064d38b483ea655e5f7d97fa7bd0639ed845b1242eb995e188625f237970be63139934ca42f539d1e349a7dfba8e
 DIST eric4-4.5.14.tar.gz 8196127 SHA256 c9bf55b9f7c99d639325426e12df235337f738681e9b078930ec85f93c7a11b6 SHA512 6dc12afb598277cb40c82c222c76607e9be63f4b423482404efca40add5f98c05d177b15739bde86894da8484c8638dc8e40757d3a80ed316910b12fab3621ef WHIRLPOOL e0623deea94fe909d9bf2a4eafa3cb3415ee3b7044a55c70c44c8e831eb49b51a3960d3abb5cdfc35086c642795eda93590959dadb69de944975f7e4dc758c79
 DIST eric4-4.5.16.tar.gz 8190709 SHA256 48a1c4b6d0e4b37a24979b0b15f5d19a2d83600e9cb58b713499e323f3e59fb0 SHA512 17a4a9a60abd31edabc3e333649bfc096f0113e7fdf30eb00bc9fb0f71e02961015e9a905984cfe75858c6416920cc47895a9fc1b276b919c349cc23a591665a WHIRLPOOL b5b56536a65b03ff6cafd7006f0c84b083532babfb469727224124572c31ea541d25326a34048896fb517928dd31b983e44f9f33d6d06fa5759591bdc32ec279
-DIST eric4-i18n-cs-4.5.10.tar.gz 458580 SHA256 a4233de271fd372a9796d7c7b73f2a5d8b5fbefd2680591d50fb929641be9f66 SHA512 a7c14d04a275f4aadbee8f3332e91c17473f8e57f6c18bea20253c41ba50124668c1138f0df62b818dcfe0d11b7d1abf5ce5e4a20927228c485996e14cca6bc2 WHIRLPOOL d90bf61dcac2857af936fa3a805b56b8939d961662a4204560e9d3fbf90f75201070111386f21c6bb1a28497f10eb31ef5906f3f1842028b319c871bc2f22888
 DIST eric4-i18n-cs-4.5.14.tar.gz 459406 SHA256 6820f64c6a2fec5777e6444c824c984d651b55c3f2d62b670234adf832bdf98d SHA512 60d2e22761471f2b9396dd83d92e61b431f9cfa15e479bd3b9db0043e2d78cdc7e3c86b99141c9ce782a6fd65f64db9cc0826f08e3c0ff129ed300b599d51054 WHIRLPOOL 7a05914f2968b59dc936bd744665698198f52601781f3db03c870323cfbd08b974cb7fb57fdf5a253949a4ab9c50856d97ac0f2fd795a1cf51b0ac0e8d0adc15
 DIST eric4-i18n-cs-4.5.16.tar.gz 451955 SHA256 dac082924c538c9271602fe1da3762a63c57805bdf4395205d385e2d39b036ec SHA512 2006faeb373cd61202685789405415e380f3724761bb5b1126e03876b8a5f3a35d1e42fc4e3ebe3273564bab916431171bc84528459fc849b79739c711e4449b WHIRLPOOL 90db3d7cdad3cdd3d8ddaec05add2204d02426ad93547210de923f05ad4967bf1d0804230c98adbc1a904b4d54a7da51a69ca389dfe26212e720dd1d35e86b3b
-DIST eric4-i18n-de-4.5.10.tar.gz 468438 SHA256 a17c8244b2ed5e88a5bac088dc26e45f3b65339a180d2011481517dfe1ba9797 SHA512 18fbdff39cc0f826b3dfb37644085e61ff8457cd8001ae3552104596f16778f00d1755e3f42a8f296c2c1eafbb2c132aaf3317a1dfe5017b774388bc37bf7102 WHIRLPOOL d886aeb13b689d3af57a5f8f0101849ae2217cfb40dfc3aa6c08fc5c2a8372b989ddb03670ee6388b52b8c569c2935c7f38486503609aa9231fdf11f4ae469e2
 DIST eric4-i18n-de-4.5.14.tar.gz 468475 SHA256 44d3404f5fd29650556fcdb214a67b0ec3071564fe4f2e473aa92ce1ef1be915 SHA512 6981d758e056af2e2f5e4d6b106883108813c822016d0cfbd5e52adabec1301510998dfcd996e6874bad4b7fe86d5eb1ff605712ca1679716d2df5a825f90af1 WHIRLPOOL 6f882e78078ec70338c5283df1d0716f00b783a4370021394fe07dd2b6a7665e8cf8b65201f6278e13b9059f88c1d402512f340bc9db3592c731aafb03b5e25f
 DIST eric4-i18n-de-4.5.16.tar.gz 468468 SHA256 3d1b352c1de5e8850a9f92d797ebf07643af58c61ff118ae18c444ba822705e7 SHA512 37eb0e81e68a47cb6925d94b6ec91331468e6048a2b97554da21ff5d0119c410a8e467a50076c1e1e73baf3ce2231f4c2bc2feb2c76d0baee28db0ce8c060c9c WHIRLPOOL 9dba9dab00f3c4a47af272e8559114ac127bc872ea05c85680b440ccd2ce7588d42ac7359c6aaaa5b327b796274d591cc9ee45700f1861d60684e301cb745a83
-DIST eric4-i18n-en-4.5.10.tar.gz 126821 SHA256 dd31ca2b353a016d06837ea22093e8fcad937543d0e67326c5ebf30950b8b137 SHA512 73060408374a76cd8f63db6278a7fbfdd31d553e28f80c4a173d51916e04a5d35afffc9b8f2cb5b87e1ba5b47f2c4011f75bd1dac10b22b9bbc29d521a61c415 WHIRLPOOL 829be119b8dc3bcfd8883fb1e05021a8a92944590d09333c9880fa608a362e8d7924f22cf8d33e458db57bb8524b74a185ad5631284739f82ae30575e2141b2e
 DIST eric4-i18n-en-4.5.14.tar.gz 126901 SHA256 cc1a7dbd821734b043b6c3059abe6452730ed512865cc8509522a4f1f254a377 SHA512 2ed6d3f102f7672b64b3e7971f1696a98549f98005b4858401fea199133ac652f063e6c3b38a83334382f6e06e008e2b00af897643e7461f7a37754b8823f2a2 WHIRLPOOL 62dbe69946fd86c075267dae88101955fe71ff86fd8fe0b8d35891a9f2ce90e6f0756b377f64e6d5f01f2a6a48b79a591acfea12b5cd890cb4c7199e6307d147
 DIST eric4-i18n-en-4.5.16.tar.gz 126891 SHA256 23552277c907bc78a783142769e35f23031a8a8fc018f52092ca7b7efb199fac SHA512 693905d498316c38ca676e74caf2b928f0a186294b3f69a145be1f332f660011ae00a15f49c8b5c4843b875bdd598c06cdf1e1138469ebd92b5512aeb81d18c9 WHIRLPOOL 9f319177038bd9d0c7c872eea8fe10d419dc34caa7e15dfbec6c4f54395a55b8fdfba4572bafab675d51e7c2ed697edf76ff66e7eff44e6cc1d6591b05202dc6
-DIST eric4-i18n-es-4.5.10.tar.gz 473342 SHA256 390c7af734bec29e359db101d506bb4b412710591ceb7f99d280a6c7471a5944 SHA512 23f7529f6323c593a9fc6aa084df39e174c914375e893dc6c0b6d0a2879d0a30bbafdd2c62f5cb3119991fe48baa1f874876d3a0255ed892d32b101520d99afc WHIRLPOOL f06a7a9bc0165297378dab6ab8208e062a12181b22b150ef9732086e4cbda2d95b3ab4e2d2d85c1f814f7425b0266cbd78963d092423c4ed060b45a2c022ba28
 DIST eric4-i18n-es-4.5.14.tar.gz 473286 SHA256 73da8556ca51ad49ced382fe561ae8899abae99238398232e3d3c9fd395e1cbe SHA512 c9a322db01969ff44a178110ceed4578620a5b1a6e27316eeec0908b78ed73b51ea73f471a626993e2141b28c624c06859a0d1a38726192d0c02ea0ac4cf66e8 WHIRLPOOL 7800b1731a56322a6b81666a3d336d0edc5b9622930502ee21623e6a8cae7330e37e7a671e44c0b5ec18405bdfe4bd4fa359eef0400d9386e7d98baea1ca7029
 DIST eric4-i18n-es-4.5.16.tar.gz 473282 SHA256 37ac7ad7eedd72eb7e1e492ad5b16fc5702d979ae7d72390cf23f5c794263f4e SHA512 bd8c5e6d04f6d1d42aefc35c8fad7dc8b60922d0ce29cc7bf8021b7a2113a9001f476b9d4d4075562c9a2f5d062fb9f0fa5369ddc0c9e98468972f54daa96d1c WHIRLPOOL 671f62ab5ae5e5b492e524d6ec16daa5732c569033917ae7b075095c3b1dd070a4bbf25542742d1d27af7fd11a0bd0affd177f510ae69e7c05e01a43639ac129
-DIST eric4-i18n-fr-4.5.10.tar.gz 473791 SHA256 9014ed821a7eecacb49ca24ec677502612db4a22535a301909518f32ce9d5acc SHA512 8e3cb06fee123ce528838cc5961a6b295a1e7a1b23ea31ad54438231a5e92d2c16fbe01090b996b7a099a53bcfd46c323d4ea427c40dd370c9d385707ac79f0f WHIRLPOOL 0b7491a7e51be376e90ab6e80722ba3794e2006dbff09d799dca9b4929acc35d8af1efd61928c23e0a5ba9cdbae8f95c770e937a82d7da4aecaaefcb6fd8a6fd
 DIST eric4-i18n-fr-4.5.14.tar.gz 474138 SHA256 ed47e08b6b52b1d71e61fcd4c22711044af12dafb4d3bc8fa7c7f9ae8a927bfc SHA512 e73ffe8f1aa153118528458f7d46d7f75bb24a2207ba2bd987d19e9e9b5d08b18d31e1a2cfacf1c6e8377ee38ad3f8be49cbb0d7fef3fa727b4388d4694836c2 WHIRLPOOL f9d27237867b40c165cf77d86d3857183dccc260ec78f92b52672abc272a26498e911ec0cb2817c5b94662b9404213f8d14d528d0f1d5b5b4a9554b48d3f025a
 DIST eric4-i18n-fr-4.5.16.tar.gz 468426 SHA256 24203c2910457acb136e758c1b3a74e1aa22bc54fadf780d0546a5c57d4fb3ff SHA512 f4ed8572ec50f889e5af3ccd315111c28bae2bcaa7dda2d853902f563b743a79edaf70eacd93d605d39c9bb45f7e55389b3924dd47b935d31ffcbd44e701586e WHIRLPOOL dd70311f772ec29a665f65bd35707e494f65a8471da1100502bd3d654560ce638255e63b968996046e3f6d7a3adfcb6a7746747cbf742a67851063d6a2e174f4
-DIST eric4-i18n-it-4.5.10.tar.gz 463635 SHA256 28d465392c511676006eb4b9ea60244d1d94e01a8b2e518e70b7b29d36c1bb9c SHA512 4df7a2e8fe417851d304ccc5ba7a94ea6a8a777d6b21085dae4e65ae7390f5f92652b6fb3f9352a4866f3554fdf114a92a2ec3e78c227663ff9fcd1c9a43176d WHIRLPOOL 7e2c7d14598e743e359de509ef0711c9fb655ba3bb684da427714d16c13585f64057fc894afe1a72f0e7eb2a63ec558a23fe4f551db59b5b9666299a18b9dad2
 DIST eric4-i18n-it-4.5.14.tar.gz 463579 SHA256 05d7f187388e8f12fbf9c71af1d81acd1568e3e4bdf1ed1cfec0b72ecf620e27 SHA512 fe61ff214a3e3b536bc4a9a0b803344dd0d46bb2328ca94b3dc20d0d603b37dcf384f7b98254634b6ddcfea8f592227fb9fc5c06840ec8d5bfaf4982e5fbf2e1 WHIRLPOOL 65f3e341cf4540d1d210c214ebc97d27edc5c81377155d13cf0dcb51a36aa3eac755e4b7970f097d7544e8ff49b3212d4260c86423cd127b67f48c82460617bb
 DIST eric4-i18n-it-4.5.16.tar.gz 458344 SHA256 5ddd16838050b2ce65a081995a79bc5db78aa87ea0187b24e63c3e195747e126 SHA512 69ab8730afe0a449db293d6d7e14d78d525455b1a25ebf364e2483b67750fa6d3846db7e90da5e1a04640932b334129f698f9d62f5ef5a17903405f6acc5c6fc WHIRLPOOL cf9e6a9d7239f11c7588e6604b476769009ba585872283819fa350b8d102bdf404930b1b78cdb49dfd39e4f3f7d3a9c0567b468aea8d3ae9ef559d669f4bd5c7
-DIST eric4-i18n-ru-4.5.10.tar.gz 480865 SHA256 ff15df7f3dba998dfca9996cb9d3356475fcb8e4afee3179806dc33132d94aa7 SHA512 141fc6550b6670be0f9f98bf0e89799118b579e30f2f2783ce8ee9f06b36f87de7cca82aed0bd43e13d9bd5d7410e057268acb7c3a9c193e9952f1e060773971 WHIRLPOOL 9b2380e5ac14f73b0489350f5f43bf3f42652c1a2eba4f2fa451109ad3d24c36dae9479a91876ea13c6c60b65a707332a5585fb2263d095d8deb7eff39ef559c
 DIST eric4-i18n-ru-4.5.14.tar.gz 481390 SHA256 952de6a8523fd9066ad05edb7296f4c17e2d6f0571ad13255155439f26c35dfd SHA512 219dfd0c26977858051038bd371effe39ed3a1505325f8c9204c4cd039bfa9d79b7f7689bf63794df42ecb79eb3541641a1f1dcb9539cd62295b50668bcfa6e3 WHIRLPOOL b8450f85dbb0ae9a8bae687738a62d2f29664ad73c79cce8437dae544771e15fb7045d2163b8746d313362cc0e58548dd949e431df7c91819ae90f5cf814a819
 DIST eric4-i18n-ru-4.5.16.tar.gz 474729 SHA256 835772e8c37cc45fa147728e0387881078b0f39da51bcc3ea62066f2b5eee2a4 SHA512 b7537b792404bc06133b93e50d27e4654df95d4913e9b5f26aafecf4a47f8a22d4767736a02f8228797b5f21ac99bb1a2182b199c86de0f749467c7afba3dc47 WHIRLPOOL a90967c1feb2d67a6b6eca7d13a98d9b322d14446bcb9acb132748ccdcfdd2e6649b152dbaaf6df70f8a44908a789eec6cc2afd10b8a55222508759f3a27afb4
-DIST eric4-i18n-tr-4.5.10.tar.gz 356958 SHA256 b4f40c13e8863b1321008e79024e03471f2c4d08ec817773718799fb2b172158 SHA512 b4c23429a51069f23489ddc6f31c6b0b88d80fa3ff3d099fcbe9d58295fe14757e4e5846a1a6f685078e3329b2cb933cfa0b2ea0d23ea178343ad151ec1d502e WHIRLPOOL 26ae2b83705271cbc42916255aff136a873362925e4244e42a7ad571956e06884c40267cd9faab8fcbee18ecaa53e68677d4daee5ccac39e4ddd239a2af4462f
 DIST eric4-i18n-tr-4.5.14.tar.gz 357329 SHA256 8644be26a94c9e9fca3f6642fc1eb0986c000f7638c0585dffe4e00f4a5769dd SHA512 4463b9655ed0dede2fe978e514598adbe935e062717c431a96c7fd551984e369d5b7307e5f47ebddd2d6a1d470e372a4032053b534cbe17ce23a599f314e3cf7 WHIRLPOOL 1333dffc6edaea24533f61c491dead0528d95013a0e8be3386e4f16c8e91f5fbc99156be6344c4f8bfe8d86e6e3b8286c1273c02ac8d6aa6c635c310627df0ad
 DIST eric4-i18n-tr-4.5.16.tar.gz 352443 SHA256 f5e3af24f85aa81c110745b5c166b295838ada77d8f3cd3a48c3ef957472f51c SHA512 27a66e4b046ed782d74f751848ec053be82b77fbd6da05d3aa207121540958cb485f0ce0a9eaf327959d0a72fd2f258fdd4e51fafe5c8ff22eb2280f4c7bd65f WHIRLPOOL 05e6b0bb89d9aef7222c4370b0cd08906162fd0aa366fabef9e91fbeb260be67f5bcb84d7755e56ed8d670d59473a2a5c425a0b8d354065fda719fe21607b449
-DIST eric4-i18n-zh_CN.GB2312-4.5.10.tar.gz 390816 SHA256 f38f61444aabbe110150a786e31f4ea1697a9cdb39fabc87cd117ceaeb420d4d SHA512 bfe5e2d7707e223a1feea9e9064b1a8f40626b7db8def1ae1ba273fbae6db0b3267b72b49d5ac439d0c069d994a6c51f35164eb646dbef0ea73972d14ebc070b WHIRLPOOL 9cafe39ff50748ac9f9981407c3d0a8ae35746a024681bbeb81f973fb22225efbd3b6f14e16922f915b6794527ce34a9379b5359756aeca4f5be221cab5b1c7d
 DIST eric4-i18n-zh_CN.GB2312-4.5.14.tar.gz 390815 SHA256 307f8b4f918722dde56a36129aecb1a8f46377726e30b46f5e7ccfbdf2005d77 SHA512 a732eaec0a7b0f7ad1cfac8e04595ecb84af435bd00088a0eb411f825f5d50396bacbf65c24bac412e84ce0d76ae165a963803c806f38029cace927755ed5496 WHIRLPOOL d8a296cac936fd1203a9c09a67bcc9065d4472b3acc5f773312ace45b3e56110147e355f76d771d9929e9391b7905832a0a4b8294fe135206f0e4d2677675e8d
 DIST eric4-i18n-zh_CN.GB2312-4.5.16.tar.gz 381236 SHA256 8fbd7220cd4f9a823c6db91ffc113faac673a853839112b72fb6534aff5e57fe SHA512 9b800466d61bda206a38362d291c7b49333af9d37025af1bf787cc37800f23f6e522afd165746d723ba30cfb9b99f621fb1b4f43e5bcf8ba79e4a6064d9e16d1 WHIRLPOOL d056fba91dcb2f1bd412d0284c1304fc5568b0639566d30b813d26db5b42d75b42214104ed455ef7b5ee7a5bfeba235af1761de13f57ddc20dac490dc31ad646
 DIST eric5-5.3.2.tar.gz 10144754 SHA256 3fe850aa7b1b9cd149573e2b0187f20dcb38e86f790ea67bdd6cecfd67c0c351 SHA512 551e2f92ccb8a988fc53f42b87fc9783eef5de9f05a948950f7e1be032da1a76c48b576d8b8d32ff46da8eb43457e7cc2e29dd8f36dbeb3069d1ea0ef6afbb87 WHIRLPOOL 6597d15bf33be45db2cf5447d61378928c5e6671a08b9c4483deb1a1cc49165b645e6f36f4feb2b301000c697e9b027357df5cf60e9dffba90973083bd30bed6
@@ -63,28 +53,27 @@ DIST eric5-i18n-tr-5.3.8.tar.gz 481933 SHA256 c1302de3094a2f408eb12cfb8b7317a3c2
 DIST eric5-i18n-zh_CN.GB2312-5.3.2.tar.gz 464843 SHA256 f522e57070375cc1842f0e4d64a9f9e42538544ae62bbd856bf19c9e5353a498 SHA512 be359bf4ae00bd27de37552c8ddd817229de2b5c9c7c1853c23b14a6af971e197abee63f980693bbcff15e024f1ff934465e6b2465682ad48c32840c54ee6e3e WHIRLPOOL b8f172d02e8a41c36a606de34519dc81e933c28932d311554335fb6ba3935597f2fe385e6264b9dd76b0b930c6da2204e5371ff4e4069e4c659cc39853228c31
 DIST eric5-i18n-zh_CN.GB2312-5.3.6.tar.gz 466873 SHA256 dd67b7cb299e064fd32b029e8872f576c7fb5a9594d05d9eccd3a45d6947bc5e SHA512 86d1b43771fc56ffc5b4d63b8ce46fd7674c36ebb5df7d24111cf807323c8aefbc5b52ae415bae3323ef4740180d03d60fef582cadff09d176a7e5c37ef75700 WHIRLPOOL 13fae76dc94cab64d77b230ff8ca35ac4e19072078031483d08976907298bc2e29d405d0009b839c498a087d6c68e21c324af3506f305ad2f205adacac1933ae
 DIST eric5-i18n-zh_CN.GB2312-5.3.8.tar.gz 466864 SHA256 81b9d205c6faf6e96067a8ef637f64009af3cdd0349c67a5ec09950beea3aa08 SHA512 49c4ab75b7d814ddf54f1a88ea8c69fdd6b1d669913c7b59924db664ec0304b7ae566df7276cacf9f6351044b60d99a297bfef99be5807b337723900957d04bd WHIRLPOOL 01d1b14838243a54edbf73ed9b77fabe9752bfda5980d0154c687e63ec7b82e9728ef2a359056aef26a221d8b3148a64a2b6fe8ce04b67b1c77eec7e53555d75
-EBUILD eric-4.5.10.ebuild 2848 SHA256 1a25221f69cd17b9c58dd1cb6cbbdebb1a729ae18c9ec4d106f064b8cf6ce94c SHA512 f6ebdc9390cc695abfeaeeaf0c43e4dae52f4ea1fe6f18a63023c1729004c9a632fddbababf49a3a98c3e8a48e0a964f12d28d51c6205884c5258e872afea6da WHIRLPOOL 43cce27610b0d3ae78f3f30675012e162d59bf86a73eef3a92ae690f3b97e9be66e6481946a83a5e1151648e8c14f03b7b720bc8ebed24eb02c18a47fee9fcb3
 EBUILD eric-4.5.14.ebuild 2848 SHA256 04913f2b047fee97fedc7d8068ab1fcc441c12812964df175a75f99ab1de7d47 SHA512 a0701daca099995dd06445b180dfe1b5163fc7fb7cd0437707289c4768f0a3ac0879ef36f856b08fd6e03ce2df74126b7f8a71a79c7a1dd71d98b429134910f0 WHIRLPOOL 9ecd7d696f7164beb089f245261a0643aa5d1edcb7020e61094f5dfd92ca887b0ac6681bf388086c309342e5e671eaed748125e020055c1d69ed746c017b57e9
 EBUILD eric-4.5.16.ebuild 2756 SHA256 a7b0405cc7beb1a2f9ea23b9ca2aafc016694a66b7d1bf4a3cfaef9385b5d34b SHA512 9687b05df412e3f33bae3fd402e26effd12d393cc1a32b14e6607045c8ad0ea9300d485425e27106f8e80a7ef8caec58cd77ce44c73cf31ee09d1314959d71dc WHIRLPOOL 196c5a950d6048c64a9fcdbe5ce9fe92325a250a5415f51a3e6edcfb93d301a1aad8bcb78a90f8d71e17fc8122ce059b48a82820e02f362807b2526588cf2f3e
 EBUILD eric-5.3.2.ebuild 3067 SHA256 5b5e713e4b81715e49dbfc48ffd0c421d3bd50da85a7c6eb6a02502c539aa6aa SHA512 c136096bed0ee6d505a33ead034b0599662b2d5c6217674c9bb8418ad0e9ecbd4d8ba1d289755f39446e62132f83a67dfe7cb32243dd94bc3fef226c827db10c WHIRLPOOL 2b5aa53387788ec63b37b877559a1220423ecc801cd3a1b4a28d93af39258cac8332be2f7566ca056958fbbe7907b67adb6eb9153426866c255ecb0d2b23c11d
 EBUILD eric-5.3.6.ebuild 3073 SHA256 59fc006a144e589c23a0779562147ec27cea9d7c0994c3a3a9575c7f23205b2b SHA512 b66df301564ed1f84bb41d2a00b5fe21e4534339ade1c89265e6eb359f9bd2e3292d36c74f17a9588ac9e350af9d8ca7fed637a834ff7902d6021f589da2f4e0 WHIRLPOOL 558244b1acdeb6e84b724dcfcc79c0f0fbf5a8d788041ee397207195ef42cdadec633f4bfecfc014dccf6c52c7bf412055f8bac70578cf9f82b8438943492984
 EBUILD eric-5.3.8.ebuild 2994 SHA256 c524fd13fbfcbc0901989ba7f97fb4819ce4918f88b1d8b0b6cd6a65bf87fd4a SHA512 c39b48ace1e91b4c3c497624499208316f31fd82c8d0bf32e6fc4a7c89859b3bf2ca522e175b4e79af0b63f9874ca389fd86a0cd52cb8d773828018494f33377 WHIRLPOOL 8df8948e6c6b96823cc899495f1a47827852ff46e6033db4ea4df3d02bf63d8e91f62d671107b58e1bb923604cc91de56a7a676c6d0ab14bcf2b727fa540ed70
-MISC ChangeLog 28059 SHA256 2ddee0db1ba7f4c16912b04f56b74f3c2d4a0007b30a5fdf2efffd72255a8a9d SHA512 29d2276ca3bef820e99a2f2a3c7c8be6fa6e55258e4b5d62f06403516c4883b21e1226bdb0794f4c5eed4db5c79265213c11aefd13208fba285029f0fc65a416 WHIRLPOOL 306991820aa911958a7d9ebff216d909aaa6fd7b617a8c19a59b12a69136bbbb67d91efe27ae4a75dd9021b1bb6a5fc270a761b7d0dc7b64fa82b642cf249d95
+MISC ChangeLog 28138 SHA256 f4393675ad2aae05f476a12fd5190f8311c846867435723214aa05f30910bd43 SHA512 13a3498732152643bb4782d50ea0bb2994cdf961d5afeaeb66452518ab3363707f7ce20c6bf6c37d0de1349e3731bb98ce7a1e6c209be1cf6476510e66631c06 WHIRLPOOL 5db76ccf607458b917c1a3948c7ec1d8264792710c5ccee1079d0ad6f664358781a312e53253c4e949acadaad5af496c153bb8d922242645586b3b3ef7e9f65c
 MISC metadata.xml 179 SHA256 1fbdee58e0ba0f8730f6a27979cb7eeed8ebd3afa316d61b34a5f4893291a646 SHA512 27c5c95cf5b26cd3fd03c986b4baa00980d4af079adb673854fc49de3e506f4a9d6a28fba9a5b7439cc7b54fcd5c71c16c1d5b87646c7e2fcaa1962fca839c75 WHIRLPOOL cd2ad0bbb86536f7b810597a04019b1de20c7a3baef72aa7c11d9fcc1bb9a225bb97d043c1ecb2af49c8e1796c265520ae8996b5521dd3476e7610e91e5b2d5a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSuYOjAAoJELp701BxlEWfhFUP/ii2Np99gFuppKABYw28IuYN
-7DrJblch0Mrb5BLGt7vHYL9/rcb22T0bPPzw0fwZGXHz3lQahwpA4W6YHHTB7j9Z
-Dvp1Ufm6ruRVUS2ReEwgO07SIhs2X4VGMc1U1+lpGyROnHvFnfdy43H/EAfnHI/H
-FOWhqhYb2BDD60Ns6FsEWdDpXHUTftiRVhakS87V041DaU/jFtuh6r80tOIwdzPu
-RgMs0B22IJxILpNL4DmeVkeEhngR/JpfbJg0VzQpH3awv2DNsXjrRaRnD2P/+PM+
-qrWJgAtWq8SI9CTSLarYtKLNH4FRkFOf1HvPsyIreGVa1GMVd33aUmfnE1VomxvY
-hLc5xohCQeyF7P3gwOc6WWZVOoG3TpmpqbjgKE5Wp8uh/A3b9x6LEUT08Em1evSx
-hLEtpEYi72CQC2wA4aoX7464Mfiwj6ddQNMxiff82XyHi1UB7rDeZQboXeNfQmL/
-QhbtSQ3feUS/1c48G3GFQnVn/g6SngFsLQvtxKKAkhvqiJvWPbw5tfLGufSp7fqS
-bNMZNIQjx852ygk3sZP3UPnwc+su5OGtWWl8XP1T5koQwHjxOjDDbAwCrrXsWlOE
-hmlzJQLAP4BSDtxN3eBFzDN80LY0tFfBuyzzoomroIM3RadFX9n7Fy+eg+vLgtC6
-7Tn0dB1RIGXXZ2fLvsEZ
-=QHQ7
+iQIcBAEBCAAGBQJSuzOHAAoJENXLsxwXqFxymWkQAKy1MC9kmVXkjuSDdkOWzErJ
+kxYMJ5mgtFzUMB51ky9kWEr73n6iABaGSGbyzejaymzMmBInHM2dH865UCwv+LLs
+NUV1mumiEnh1Hut5b+dlFWXW9XRGx4y8ftMJ0SHe0n0m/eki+9ErIn2wS8e3Vm7H
+oZEgoY9JomBJru1gqAy8f4mf9kn/wwaN/bIYhpRGnUXIC6pbDs7WQCdhUmGfIkDk
+tWZUlvC7rhWbAfgbu1hoAFJ4DLRK+KKbgR3Oez3TzxQJARw9nl5eihvMJ8a4IFei
+3gU+vvqlKjxxJJ1Wy4+epgt6YI/tnCpWxk4Lv5MRaZoL7q7jcZ/8Rpi9tbG4r15V
+bpphaqe4PonOT2DXxnvHO6OqKJ3QhPaOSd+49MJLUsH+xm1ESCz1KbOqtdsRmdwl
+/gdDxMXKkZ8M+a73usqIVOD+8CDlXKAR6RfBQZG7Am+ARmp7zdmzOjI21aySe4Mv
+7vN5GdJFTqFry0LNOU3+2K449TzjHNTzhZgtFCE7bhRFbpyX5M60oJAfBwD5/k+f
+O4NkntVID0+fO2VSHVlWieG8e/irUoAOOhKh5Bpz0rpjjIYztO/frynZEXQ1LJTT
+/JnYTJd1wHk9Sswqs7IwxrOKteC7awSYCpgiua0JX8kmRAkeTS/jBLaf+3vv98/Z
+giuxYAGxRHUduiwr+Q0b
+=Ovb0
 -----END PGP SIGNATURE-----
