@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/eric
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.206 2013/12/24 12:52:49 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/eric/ChangeLog,v 1.207 2013/12/25 19:35:34 pesa Exp $
+
+  25 Dec 2013; Davide Pesavento <pesa@gentoo.org> -eric-4.5.10.ebuild:
+  old
 
   24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> eric-4.5.14.ebuild:
   Stable for x86, wrt bug #486724
